Turned into a cli tool and added a systemd service file

--- a/open_screen.service
+++ b/open_screen.service
@@ -3,5 +3,5 @@ Description=Open Screen
 After=multi-user.target[Service]
 Type=simple
 Restart=always
-ExecStart=
+ExecStart=OpenScreen
 WantedBy=multi-user.target
