--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-mediapipe==0.10.11
-numpy==1.26.4
+numpy==2.0.0
 Pillow==10.3.0
 pyvirtualcam==0.11.1
-transformers==4.37.1
-toml
+toml==0.10.2
+torch==2.3.1
+torchvision==0.18.1
