--- a/open_screen.service
+++ b/open_screen.service
@@ -3,5 +3,5 @@ Description=Open Screen
 After=multi-user.target[Service]
 Type=simple
 Restart=always
-ExecStart=OpenScreen
+ExecStart=openscreen
 WantedBy=multi-user.target
